@@ -9,6 +9,7 @@ import static org.folio.bulkops.util.Constants.APPLY_TO_ITEMS;
 import static org.folio.bulkops.util.Constants.GET_HOLDINGS_BY_INSTANCE_ID_QUERY;
 import static org.folio.bulkops.util.Constants.GET_ITEMS_BY_HOLDING_ID_QUERY;
 import static org.folio.bulkops.util.Constants.MSG_NO_CHANGE_REQUIRED;
+import static org.folio.bulkops.util.FolioExecutionContextUtil.prepareContextForTenant;
 import static org.folio.bulkops.util.RuleUtils.fetchParameters;
 import static org.folio.bulkops.util.RuleUtils.findRuleByOption;
 
@@ -17,42 +18,60 @@ import lombok.extern.slf4j.Slf4j;
 import org.folio.bulkops.client.HoldingsClient;
 import org.folio.bulkops.client.InstanceClient;
 import org.folio.bulkops.client.ItemClient;
+import org.folio.bulkops.client.SearchConsortiumHoldings;
+import org.folio.bulkops.client.UserClient;
+import org.folio.bulkops.domain.bean.ConsortiumHolding;
+import org.folio.bulkops.domain.bean.ExtendedInstance;
 import org.folio.bulkops.domain.bean.HoldingsRecord;
-import org.folio.bulkops.domain.bean.Instance;
 import org.folio.bulkops.domain.bean.Item;
 import org.folio.bulkops.domain.bean.ItemCollection;
 import org.folio.bulkops.domain.dto.BulkOperationRule;
 import org.folio.bulkops.domain.entity.BulkOperation;
+import org.folio.bulkops.service.ConsortiaService;
 import org.folio.bulkops.service.ErrorService;
 import org.folio.bulkops.service.HoldingsReferenceService;
 import org.folio.bulkops.service.RuleService;
+import org.folio.spring.FolioExecutionContext;
+import org.folio.spring.FolioModuleMetadata;
+import org.folio.spring.scope.FolioExecutionContextSetter;
 import org.springframework.stereotype.Component;
 
 import java.util.Collections;
 import java.util.List;
+import java.util.Map;
+import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Component
 @RequiredArgsConstructor
 @Slf4j
-public class InstanceUpdateProcessor extends AbstractUpdateProcessor<Instance> {
+public class InstanceUpdateProcessor extends AbstractUpdateProcessor<ExtendedInstance> {
   private static final String ERROR_MESSAGE_TEMPLATE = "No change in value for instance required, %s associated records have been updated.";
+  private static final String ERROR_NO_PERMISSIONS_TO_EDIT_HOLDINGS = "User %s does not have edit permission to edit the holdings record - %s on the tenant %s";
 
   private final InstanceClient instanceClient;
+  private final UserClient userClient;
   private final RuleService ruleService;
   private final HoldingsClient holdingsClient;
   private final ItemClient itemClient;
+  private final SearchConsortiumHoldings searchConsortiumHoldings;
   private final ErrorService errorService;
   private final HoldingsReferenceService holdingsReferenceService;
+  private final ConsortiaService consortiaService;
+  private final FolioModuleMetadata folioModuleMetadata;
+  private final FolioExecutionContext folioExecutionContext;
 
   @Override
-  public void updateRecord(Instance instance) {
+  public void updateRecord(ExtendedInstance extendedInstance) {
+    var instance = extendedInstance.getEntity();
     instanceClient.updateInstance(instance.withIsbn(null).withIssn(null), instance.getId());
   }
 
   @Override
-  public void updateAssociatedRecords(Instance instance, BulkOperation operation, boolean notChanged) {
+  public void updateAssociatedRecords(ExtendedInstance extendedInstance, BulkOperation operation, boolean notChanged) {
+    var instance = extendedInstance.getEntity();
     var recordsUpdated = findRuleByOption(ruleService.getRules(operation.getId()), SUPPRESS_FROM_DISCOVERY)
-      .filter(rule -> applyRuleToAssociatedRecords(instance, rule))
+      .filter(rule -> applyRuleToAssociatedRecords(extendedInstance, rule, operation))
       .isPresent();
     if (notChanged) {
       var errorMessage = buildErrorMessage(recordsUpdated, instance.getDiscoverySuppress());
@@ -60,7 +79,7 @@ public class InstanceUpdateProcessor extends AbstractUpdateProcessor<Instance> {
     }
   }
 
-  private boolean applyRuleToAssociatedRecords(Instance instance, BulkOperationRule rule) {
+  private boolean applyRuleToAssociatedRecords(ExtendedInstance extendedInstance, BulkOperationRule rule, BulkOperation operation) {
     var parameters = fetchParameters(rule);
     var shouldApplyToHoldings = parseBoolean(parameters.get(APPLY_TO_HOLDINGS));
     var shouldApplyToItems = parseBoolean(parameters.get(APPLY_TO_ITEMS));
@@ -68,12 +87,42 @@ public class InstanceUpdateProcessor extends AbstractUpdateProcessor<Instance> {
     boolean itemsUpdated = false;
     if (shouldApplyToHoldings || shouldApplyToItems) {
       log.info("Should update associated records: holdings={}, items={}", shouldApplyToHoldings, shouldApplyToItems);
-      var holdings = holdingsClient.getByQuery(format(GET_HOLDINGS_BY_INSTANCE_ID_QUERY, instance.getId()), Integer.MAX_VALUE)
-        .getHoldingsRecords().stream()
-        .filter(holdingsRecord -> !"MARC".equals(holdingsReferenceService.getSourceById(holdingsRecord.getSourceId()).getName()))
-        .toList();
-      holdingsUpdated = suppressHoldingsIfRequired(holdings, shouldApplyToHoldings, instance.getDiscoverySuppress());
-      itemsUpdated = suppressItemsIfRequired(holdings, shouldApplyToItems, instance.getDiscoverySuppress());
+      if (!consortiaService.isCurrentTenantCentralTenant(folioExecutionContext.getTenantId())) {
+        var instance = extendedInstance.getEntity();
+        var holdings = getHoldingsSourceFolioByInstanceId(instance.getId());
+        holdingsUpdated = suppressHoldingsIfRequired(holdings, shouldApplyToHoldings, instance.getDiscoverySuppress());
+        itemsUpdated = suppressItemsIfRequired(holdings, shouldApplyToItems, instance.getDiscoverySuppress());
+      } else {
+        var instance = extendedInstance.getEntity();
+        var consortiumHoldings = searchConsortiumHoldings.getHoldingsById(UUID.fromString(instance.getId())).getHoldings();
+        Map<String, List<String>> consortiaHoldingsIdsPerTenant = consortiumHoldings.stream()
+          .filter(h -> !folioExecutionContext.getTenantId().equals(h.getTenantId()))
+          .collect(Collectors.groupingBy(ConsortiumHolding::getTenantId, Collectors.mapping(ConsortiumHolding::getId, Collectors.toList())));
+        var userTenants = consortiaService.getAffiliatedTenants(folioExecutionContext.getTenantId(), folioExecutionContext.getUserId().toString());
+        var user = userClient.getUserById(folioExecutionContext.getUserId().toString());
+        for (var consortiaHoldingsEntry : consortiaHoldingsIdsPerTenant.entrySet()) {
+          var memberTenantForHoldings = consortiaHoldingsEntry.getKey();
+          if (!userTenants.contains(memberTenantForHoldings)) {
+            for (var holdingId : consortiaHoldingsEntry.getValue()) {
+              var errorMessage = String.format(ERROR_NO_PERMISSIONS_TO_EDIT_HOLDINGS, user.getUsername(), holdingId, memberTenantForHoldings);
+              log.error(errorMessage);
+              errorService.saveError(operation.getId(), instance.getIdentifier(operation.getIdentifierType()), errorMessage);
+            }
+            continue;
+          }
+          try (var ignored = new FolioExecutionContextSetter(prepareContextForTenant(memberTenantForHoldings, folioModuleMetadata, folioExecutionContext))) {
+            var holdings = getHoldingsSourceFolioByInstanceId(instance.getId());
+            var isHoldingsUpdatedInMemberTenant = suppressHoldingsIfRequired(holdings, shouldApplyToHoldings, instance.getDiscoverySuppress());
+            if (!holdingsUpdated) {
+              holdingsUpdated = isHoldingsUpdatedInMemberTenant;
+            }
+            var isItemUpdatedInMemberTenant  = suppressItemsIfRequired(holdings, shouldApplyToItems, instance.getDiscoverySuppress());
+            if (!itemsUpdated) {
+              itemsUpdated = isItemUpdatedInMemberTenant;
+            }
+          }
+        }
+      }
     }
     return holdingsUpdated || itemsUpdated;
   }
@@ -117,8 +166,15 @@ public class InstanceUpdateProcessor extends AbstractUpdateProcessor<Instance> {
       MSG_NO_CHANGE_REQUIRED;
   }
 
+  private List<HoldingsRecord> getHoldingsSourceFolioByInstanceId(String instanceId) {
+    return holdingsClient.getByQuery(format(GET_HOLDINGS_BY_INSTANCE_ID_QUERY, instanceId), Integer.MAX_VALUE)
+      .getHoldingsRecords().stream()
+      .filter(holdingsRecord -> !"MARC".equals(holdingsReferenceService.getSourceById(holdingsRecord.getSourceId()).getName()))
+      .toList();
+  }
+
   @Override
-  public Class<Instance> getUpdatedType() {
-    return Instance.class;
+  public Class<ExtendedInstance> getUpdatedType() {
+    return ExtendedInstance.class;
   }
 }
